--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,4 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  error_name_too_short: "The name needs to be at least %{count} characters long"
